# GLiNER2

./: am_searching.py  debug_counting.py  print_arch.py  pyproject.toml  test_counting.py  test_financial.py
gliner2/: model.py  processor.py
gliner2/inference/: engine.py
gliner2/training/: trainer.py
tests/: test_batch_span_mask_trim.py
