[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gliner2", "gliner2.*"]

[tool.setuptools.package-data]
gliner2 = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "gliner2.__version__"}

[project]
name = "gliner2"
readme = "README.md"
requires-python = ">=3.8"

maintainers = [
    {name = "Urchade Zaratiana"},
]

dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28",
    "urllib3>=1.26",
    "tqdm>=4.60",
]

dynamic = ["version"]

[project.optional-dependencies]
local = [
    "gliner",
    "torch>=2.0",
    "transformers>=4.40",
    "safetensors>=0.4",
    "numpy>=1.23",
]